--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,9 @@ jobs:  # basic units of work in a run
       - image: circleci/elixir:1.7.3  # ...with this image as the primary container; this is where all `steps` will run
         environment:  # environment variables for primary container
           MIX_ENV: test
-      - image: circleci/postgres:10.1-alpine  # database image
+      - image: circleci/mysql:latest  # database image
         environment:  # environment variables for database
-          POSTGRES_USER: postgres
-          POSTGRES_DB: app_test
-          POSTGRES_PASSWORD:
+          MYSQL_ROOT_PASSWORD: t
 
     working_directory: ~/app  # directory where steps will run
 
@@ -49,7 +47,7 @@ jobs:  # basic units of work in a run
 
       - run:  # special utility that stalls main process until DB is ready
           name: Wait for DB
-          command: dockerize -wait tcp://localhost:5432 -timeout 1m
+          command: dockerize -wait tcp://remotemysql.com:3306 -timeout 1m
 
       - run: mix test  # run all tests in project
 
