--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:  # basic units of work in a run
 
       - run:  # special utility that stalls main process until DB is ready
           name: Wait for DB
-          command: dockerize -wait tcp://remotemysql.com:3306 -timeout 1m
+          command: dockerize -wait tcp://localhost:3306 -timeout 1m
 
       - run: mix test  # run all tests in project
 
